chore: upgrade project to Java 25; add Lombok annotation-processor config; add k6 scripts